--- a/Interfaces/de.lproj/MainMenu.strings
+++ b/Interfaces/de.lproj/MainMenu.strings
@@ -235,6 +235,9 @@
 /* Class = "NSMenuItem"; title = "Open Article Page in External Browser"; ObjectID = "1067"; */
 "1067.title" = "Öffne Artikelseite im externen Browser";
 
+/* Class = "NSMenuItem"; title = "Send Link by Email"; ObjectID = "1073"; */
+"1073.title" = "Link per E-Mail senden";
+
 /* Class = "NSMenuItem"; title = "Bigger Text"; ObjectID = "1084"; */
 "1084.title" = "Schrift größer";
 
