--- a/Interfaces/es.lproj/InfoWindow.strings
+++ b/Interfaces/es.lproj/InfoWindow.strings
@@ -31,6 +31,12 @@
 /* Class = "NSTextFieldCell"; title = "Authentication"; ObjectID = "U0N-RF-bUt"; */
 "U0N-RF-bUt.title" = "Autenticación";
 
+/* Class = "NSTextFieldCell"; title = "General"; ObjectID = "i9j-KH-c3D"; */
+"i9j-KH-c3D.title" = "General";
+
 /* Class = "NSTextFieldCell"; title = "Feed URL"; ObjectID = "xPF-M9-oZG"; */
 "xPF-M9-oZG.title" = "URL de la fuente";
+
+/* Class = "NSButtonCell"; title = "Open Cached File…"; ObjectID = "xTj-hY-aTU"; */
+"xTj-hY-aTU.title" = "Abrir archivo en caché…";
 
