--- a/Interfaces/da.lproj/FeedCredentials.strings
+++ b/Interfaces/da.lproj/FeedCredentials.strings
@@ -5,7 +5,7 @@
 "33.title" = "Navn:";
 
 /* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
-"34.title" = "Adgang til &@ kræver at du giver dine log ind detaljer";
+"34.title" = "Adgang til %@ kræver at du giver dine log ind detaljer";
 
 /* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "Kodeord:";
