--- a/Interfaces/ru.lproj/Localizable.strings
+++ b/Interfaces/ru.lproj/Localizable.strings
@@ -1,6 +1,15 @@
 /* No comment provided by engineer. */
 "%@ Info" = "%@ Сведения";
 
+/* Progress in bytes, e.g. 1 KB of 1 MB */
+"%@ of %@" = "%1$@ из %2$@";
+
+/* Number of bytes received, e.g. 1 MB received */
+"%@ received" = "%@ получено";
+
+/* {existing authors},{new author name} */
+"%@, %@" = "%1$@, %2$@";
+
 /* No comment provided by engineer. */
 "%d new articles retrieved" = "Получено %d новых статей";
 
@@ -127,6 +136,9 @@
 
 /* No comment provided by engineer. */
 "Copy Page Link to Clipboard" = "Копировать ссылку в буфер обмена";
+
+/* Copy URL */
+"Copy URL" = "Копировать ссылку";
 
 /* No comment provided by engineer. */
 "Credentials Prompt" = "Для доступа к подписке  \"%@\" требуется имя пользователя и пароль.";
@@ -321,6 +333,9 @@
 /* Title of a menu item */
 "Hide Status Bar" = "Спрятать строку статуса";
 
+/* Title of a menu item */
+"Hide Toolbar" = "Скрыть панель инструментов";
+
 /* Title of a button on an alert */
 "Import" = "Импорт";
 
@@ -335,6 +350,9 @@
 
 /* No comment provided by engineer. */
 "Invalid style title" = "Стиль %@ отсутствует или поврежден";
+
+/* No comment provided by engineer. */
+"JavaScript" = "JavaScript";
 
 /* No comment provided by engineer. */
 "Last Week" = "На прошлой неделе";
@@ -413,6 +431,9 @@
 
 /* No comment provided by engineer. */
 "No new articles available" = "Нет новых статей";
+
+/* Title of a button on an alert */
+"OK" = "ОК";
 
 /* Title of a popup menu item */
 "Open" = "Открыть";
@@ -575,6 +596,9 @@
 "Show Filter Bar" = "Показать панель фильтра";
 
 /* Title of a menu item */
+"Show Main Window…" = "Показать главное окно…";
+
+/* Title of a menu item */
 "Show Status Bar" = "Показать строку статуса";
 
 /* Title of a menu item */
@@ -609,6 +633,9 @@
 
 /* No comment provided by engineer. */
 "Trash" = "Корзина";
+
+/* URL */
+"URL" = "URL-адрес";
 
 /* No comment provided by engineer. */
 "Unread" = "Непрочитанное";
@@ -684,4 +711,10 @@
 
 /* test for a date */
 "is on or before" = "сейчас и ранее";
+
+/* test for a folder (not operational as of Vienna 3.2) */
+"not under" = "не под";
+
+/* test for a folder (not operational as of Vienna 3.2) */
+"under" = "под";
 
