--- a/Interfaces/ru.lproj/RSSFeed.strings
+++ b/Interfaces/ru.lproj/RSSFeed.strings
@@ -13,6 +13,9 @@
 /* Class = "NSTextFieldCell"; title = "Enter the link for the news feed below. Or choose from the Source list to enter a shortcut name for the news feed provided by the source."; ObjectID = "107"; */
 "107.title" = "Введите ссылку на канал новостей или выберите канал из списка Источник для добавления ссылки с заданного источника.";
 
+/* Class = "NSTextFieldCell"; title = "URL:"; ObjectID = "110"; */
+"110.title" = "URL:";
+
 /* Class = "NSButtonCell"; title = "Save"; ObjectID = "111"; */
 "111.title" = "Сохранить";
 
