--- a/Vienna Tests/da.lproj/Localizable.strings
+++ b/Vienna Tests/da.lproj/Localizable.strings
@@ -23,7 +23,7 @@
 "Cannot open database text" = "Databasefilen (%@) kunne ikke åbnes af samme grund. Den kan være beskadiget eller utilgængelig. Slet venligst eller omdøb databasefilen og genstart Vienna.";
 
 /* No comment provided by engineer. */
-"Cannot open database title" = "Desværre, men Vienna kunne ikke åbne databasen.";
+"Cannot open database title" = "Desværre, men Vienna kunne ikke åbne databasen";
 
 /* No comment provided by engineer. */
 "Database Upgrade" = "Databaseopgradering";
