--- a/Vienna Tests/ru.lproj/Localizable.strings
+++ b/Vienna Tests/ru.lproj/Localizable.strings
@@ -1,3 +1,6 @@
+/* {existing authors},{new author name} */
+"%@, %@" = "%1$@, %2$@";
+
 /* No comment provided by engineer. */
 "(No title)" = "без имени";
 
@@ -141,4 +144,10 @@
 
 /* test for a date */
 "is on or before" = "сейчас и ранее";
+
+/* test for a folder (not operational as of Vienna 3.2) */
+"not under" = "не под";
+
+/* test for a folder (not operational as of Vienna 3.2) */
+"under" = "под";
 
