--- a/Interfaces/es.lproj/Localizable.strings
+++ b/Interfaces/es.lproj/Localizable.strings
@@ -137,6 +137,9 @@
 /* No comment provided by engineer. */
 "Copy Page Link to Clipboard" = "Copiar enlace de la página al portapapeles";
 
+/* Copy URL */
+"Copy URL" = "Copiar URL";
+
 /* No comment provided by engineer. */
 "Credentials Prompt" = "La suscripción a \"%@\" requiere un nombre de usuario y una contraseña.";
 
