--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,13 @@ most recent build should be at the top of this file.
 
 Thanks!
 
+3.3.0 Beta 1
+------------
+- Improve loading of tabs: on application re-open, load of each tab is delayed until the user selects it
+- Change default download location to the macOS default one
+- Fix bug where "Show in Finder" in Downloads window didn't work unless file was fully downloaded
+- Update developer documentation & change tests configuration
+
 3.2.1
 -----
 - Fix a crash on parsing some XML files
