--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,10 @@ most recent build should be at the top of this file.
 
 Thanks!
 
+3.3.0 rc 1
+----------
+- Fix a problem with Sparkle autoupdate
+
 3.3.0 Beta 1
 ------------
 - Improve loading of tabs: on application re-open, load of each tab is delayed until the user selects it
